# second-brain

./: .env.example  .env.gateway.example  .gitignore  .mcp.json  AI_LAB_SESSION_HANDOFF.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: com.secondbrain.mcp.plist  install-mcp-service.sh  install-overnight-service.sh  run-nightly.sh
docs/: EVALUATION.md  MCP.md  design.md  eval-results.md  requirements.md  web-ui-scope.md
evals/: regression.json  retrieval.json
evals/corpus/: admin-preferences.md  ai-lab-routing.md  backup-policy.md  career-plan.md  deployment-access.md  document-workflows.md  logistics-product.md  second-brain-operations.md
examples/: lab-notes.md
scripts/: seed_public_corpora.py
src/secondbrain/: __init__.py  agent.py  ask.py  browser_check.py  citations.py  cli.py  config.py  evals.py  health.py  hybrid.py  ingest.py  intake.py  llm.py  mcp_server.py  memory.py  morning.py  overnight.py  project_context.py  server.py  store.py  system_info.py  task_sync.py  (+4 more)
tests/: test_ask_tracing.py  test_browser_check.py  test_chunking.py  test_citations.py  test_cli_display.py  test_collection_routing.py  test_evals.py  test_health.py  test_hybrid.py  test_intake.py  test_llm_stream.py  test_mcp_server.py  test_memory.py  test_morning.py  test_overnight.py  test_project_context.py  test_reingest.py  test_routing.py  test_seed_public_corpora.py  test_server.py  test_system_info.py  test_task_sync.py  test_tasks.py  test_tracing.py  test_weather.py  test_web_check.py
web/: .env.example  README.md  package-lock.json  package.json
(+14 files in other folders)
