[project]
name = "second-brain"
version = "0.1.0"
description = "A personal RAG assistant — ask your own notes/docs/code and get cited answers. Runs on the home lab."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "chromadb>=0.5",
    "langgraph>=1.2.2",
    "pypdf>=4.2",
    "python-dotenv>=1.0",
    "qdrant-client>=1.18.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
sb = "secondbrain.cli:app"
artjeck = "secondbrain.cli:artjeck_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secondbrain"]
